# chatgpt-from-scratch

./: .gitignore  pyproject.toml
week1/: code.ipynb  linear.py  pytorch-example.ipynb  reading_assignment_1.txt
week10/: reading_assignment10.txt
week2/: data.txt  merges.json  reading_assignment_2.txt  saving.py  test_tokenizer.py  tokenizer_trainer.py  vocab.txt
week3/: embedding.py  reading_assignment_3.txt  tokenizer.py
week4/: mha.py  mha_test_case.py
week5/: gpt.py  mha.py  reading_assignment_5.txt
week6/: construct_dataset.py  download_data.py  reading_assignment_6.txt  train_model.py
week7/: example_use_with_gpt2.py  example_use_with_our_trained_model.py  reading_assignment7.txt  sampler.py
week7/hftokenizer/: tokenizer.json
week8/: reading_assingment8.txt  simple_rag.py
week9/: project_proposal.txt  reading_assignment9.txt
