[project]
name = "chatgpt-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "ace-tools>=0.0",
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "evaluate>=0.4.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "peft>=0.17.0",
    "py7zr>=1.0.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "tensorboard>=2.20.0",
    "tiktoken>=0.9.0",
    "timm>=1.0.17",
    "torch>=2.7.1",
    "torchmetrics>=1.8.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
